--- a/public/form.html
+++ b/public/form.html
@@ -1,3 +1,5 @@
 <form name="application-form" method="POST" data-netlify="true">
+  <label for="name">Name:</label>
+  <input type="text" id="name" name="name" required />
   <button type="submit">Submit</button>
 </form>
