--- a/public/form.html
+++ b/public/form.html
@@ -1,5 +1,23 @@
-<form name="application-form" method="POST" data-netlify="true">
-  <label for="name">Name:</label>
-  <input type="text" id="name" name="name" required />
-  <button type="submit">Submit</button>
+<form name="contact" method="POST" data-netlify="true">
+  <p>
+    <label>Your Name: <input type="text" name="name" /></label>
+  </p>
+  <p>
+    <label>Your Email: <input type="email" name="email" /></label>
+  </p>
+  <p>
+    <label
+      >Your Role:
+      <select name="role[]" multiple>
+        <option value="leader">Leader</option>
+        <option value="follower">Follower</option>
+      </select></label
+    >
+  </p>
+  <p>
+    <label>Message: <textarea name="message"></textarea></label>
+  </p>
+  <p>
+    <button type="submit">Send</button>
+  </p>
 </form>
